--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Trivia Cracker",
     "version":"1.0",
-    "description":"Hack Trivia Crack (https://apps.facebook.com/triviacrack/). Can't figure out a Trivia Crack answer? Let us find the answer for you.",
+    "description":"Hack Trivia Crack. Don't know the answer to a Trivia Crack question? Use Trivia Cracker to have the correct answer selected for you.",
     "manifest_version": 2,
     "incognito": "spanning",
     "icons": { 
