--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Trivia Cracker",
     "version":"1.8",
-    "description":"Hack Trivia Crack. Use Trivia Cracker to get infinite lives and spins, and to have the correct answer selected for you when you're stumped!",
+    "description":"Hack Trivia Crack. Trivia Cracker gives you infinite lives and spins, and selects the correct answer for you when you're stumped!",
     "manifest_version": 2,
     "incognito": "spanning",
     "icons": { 
